--- a/Algorithm/풀이/brute_force/[BOJ#1182]부분집합의_합.md
+++ b/Algorithm/풀이/brute_force/[BOJ#1182]부분집합의_합.md
@@ -56,3 +56,40 @@ public class BOJ1182 {
 
 - 각 숫자별로 사용/미사용 여부를 결정하며 진행하면 되므로 O(2^n) -> 2^20 = 1048576
 - 부분집합의 합이 S에 해당된다면 1을, 아니라면 0을 리턴하도록 하고, 재귀함수가 호출될 때마다 그 리턴 값을 더해나가 최종적으로 모든 경우의 수를 구할 수 있도록 설계한다
+
+
+## 다른 풀이방법
+
+비트마스크를 이용해 문제를 풀 수 있다
+
+```java
+import java.util.Scanner;
+
+// https://www.acmicpc.net/problem/1182
+public class BOJ1182_2 {
+
+  public static void main(String[] args) {
+    Scanner sc = new Scanner(System.in);
+
+    int n = sc.nextInt();
+    int m = sc.nextInt();
+
+    int[] arr = new int[n];
+    for (int i = 0; i < n; i++) {
+      arr[i] = sc.nextInt();
+    }
+    sc.close();
+
+    int ans = 0;
+    // 공집합을 제외하므로 1부터 시작
+    for(int i = 1; i < (1 << n); i++) {
+      int sum = 0;
+      for(int k = 0; k < n; k++) {
+        if((i & (1 << k)) != 0) sum += arr[k];
+      }
+      if(sum == m)  ans++;
+    }
+    System.out.println(ans);
+  }
+}
+```
