데이터 모델링의 이해, 속성 수정
일부 오타 수정

--- a/SQLD/01_데이터_모델링의_이해/01_데이터_모델링의_이해.md
+++ b/SQLD/01_데이터_모델링의_이해/01_데이터_모델링의_이해.md
@@ -177,7 +177,7 @@
 #### 2) 엔터티 배치
 - 사람의 눈은 왼쪽에서 오른쪽 / 위쪽에서 아래쪽으로 이동
 - 가장 중요한 엔터티를 왼쪽 상단에 배치하고 이것을 중심으로 다른 엔터티를 나열하면서 전개
-- 해당 업무에서 가장 중요한 엔터티는 왼쪽 상단에서 족므 아래쪽 중앙으로
+- 해당 업무에서 가장 중요한 엔터티는 왼쪽 상단에서 조금 아래쪽 중앙으로
 
 ##### ※ 실제 프로젝트에서는 관계의 명칭을 크게 고려하지 않아도 무방. 관계의 명칭이 나타나지 않아도 ERD의 흐름이 명확하게 드러나기 때문 -> 관계 표현에는 중요...?
 
