--- a/SQLD/01_데이터_모델링의_이해/03_속성.md
+++ b/SQLD/01_데이터_모델링의_이해/03_속성.md
@@ -6,7 +6,7 @@
 업무에서 필요로 하는, 인스턴스로 관리하고자 하는 의미상 더 이상 분리되지 않는 최소의 데이터 단위
 
 - 업무에서 필요로 한다
-- 의미성 더 이상 분리되지 않는다
+- 의미상 더 이상 분리되지 않는다
 - **엔터티를 설명하고 인스턴스의 구성요소가 된다.**
 
 ## 2. 엔터티, 인스턴스와 속성, 속성값에 대한 내용과 표기법
