데이터 모델링 정리 내용 수정
오타 수정: 속성, 관계, 식별자
내용 추가: 식별자

--- a/SQLD/01_데이터_모델링의_이해/03_속성.md
+++ b/SQLD/01_데이터_모델링의_이해/03_속성.md
@@ -60,7 +60,7 @@
 #### 2) 설계 속성
 - 데이터 모델링을 위해, 업무를 규칙화하기 위해 속성을 새로 만들거나 변형하여 정의하는 속성
 - 코드성 속성은 원래 속성을 업무상 필요에 의해 변형하여 만든 설계속성
-- 일련번호와 같은 속성은 단일한 식별자(Unique)를 부여하기 위해 모델 상애서 새로 정의하는 설계속성
+- 일련번호와 같은 속성은 단일한 식별자(Unique)를 부여하기 위해 모델 상에서 새로 정의하는 설계속성
 
 #### 3) 파생 속성
 - 다른 속성에 영향을 받아 발생하는 속성으로서 보통 **계산된 값**들
@@ -83,7 +83,7 @@
 
 ## 5. 도메인
 
-- 각 속성의 가질 수 있는 범위
+- 각 속성의 가질 수 있는 값의 범위
 - 엔터티 내에서 속성에 대한 데이터 타입과 크기 그리고 제약사항을 지정하는 것
 
 
