--- a/SQLD/01_데이터_모델링의_이해/04_관계.md
+++ b/SQLD/01_데이터_모델링의_이해/04_관계.md
@@ -72,8 +72,10 @@
 
 ### 나. 관계 읽기
 
+![relation_read](../../img/sql/relation_read.jpg)
+
 관계에 참여하는 기준 엔터티를 하나 또는 각(Each)로 읽고, 대상 엔터티의 개수(하나, 하나 이상)을 읽고 관계선택사양과 관계명을 읽도록 한다
 
-- 기준(Source) 엔터티를 한 개(One) 또는 각(Each)로 읽는다
-- 대상(Target) 엔터티의 관계참여도, 즉 개수(하나, 하나 이상)을 읽는다
+- 기준(Source) 엔터티를 한 개(One) 또는 각(Each)으로 읽는다
+- 대상(Target) 엔터티의 관계참여도, 즉 개수(하나, 하나 이상)를 읽는다
 - 관계선택사양과 관계명을 읽는다
