--- a/SQLD/01_데이터_모델링의_이해/05_식별자.md
+++ b/SQLD/01_데이터_모델링의_이해/05_식별자.md
@@ -24,6 +24,7 @@
 - 엔터티 내에서 대표성을 가지는가에 따라 `주식별자`와 `보조식별자`로 구분
 - 엔터티 내에서 스스로 생성되었는지 여부에 따라 `내부식별자`와 `외부식별자`로 구분
 - 단일 속성으로 식별이 되는가에 따라 `단일식별자`와 `복합식별자`로 구분
+- 원래 업무적으로 의미가 있던 식별자 속성을 대체하여 일련번호와 같이 새롭게 만든 식별자를 구분하기 위해 `본질식별자`와 `인조식별자`로 구분
 
 ### 나. 식별자 표기법
 
@@ -49,10 +50,20 @@
 
 ### 다. 비식별자 관계
 
-- 부모 엔터티로부터 속성을 받았지만 자식 엔터티의 주시별자로 사용하지 않고 일반적인 속성으로만 사용하는 경우
+- 부모 엔터티로부터 속성을 받았지만 자식 엔터티의 주식별자로 사용하지 않고 일반적인 속성으로만 사용하는 경우
 - 다음 네 가지 경우에 비식별자 관계에 의한 외부속성을 생성함
 
 1. 자식 엔터티에서 받은 속성이 반드시 **필수가 아니어도 무방**하기 때문에 부모 없는 자식이 생성될 수 있는 경우
 2. 엔터티별로 데이터의 **생명주기를 다르게 관리**할 경우
 3. 여러 개의 엔터티가 하나의 엔터티로 통합되어 표현되었는데, 각각의 엔터티가 별도의 관계를 가질 때
 4. 자식 엔터티에 주식별자로 사용하여도 되지만 **자식 엔터티에서 별도의 주식별자를 생성하는 것이 더 유리**하다고 판단될 때
+
+
+### 라. 식별자와 비식별자관계 비교
+
+| 항목 | 식별자관계 | 비식별자관계 |
+|-|-|-|
+| 목적 | 강한 연결관계 표현 | 약한 연결관계 표현 |
+| 자식 주식별자 영향 | 자식 주식별자의 구성에 포함됨 | 자식 일반 속성에 포함됨 |
+| 표기법 | 실선 표현 | 점선 표현 |
+| 연결 고려사항 | - 반드시 부모엔터티 종속<br>- 자식 주식별자구성에 부모 주식별자포함 필요<br>- 상속받은 주식별자속성을 타 엔터티에 이전 필요 | - 약한 종속관계<br>- 자식 주식별자구성을 독립적으로 구성<br>- 자식 주식별자구성에 부모 주식별자 부분 필요<br>- 상속받은 주식별자속성을 타 엔터티에 차단 필요<br>- 부모쪽의 관계참여가 선택관계 |
