Modify: SQLD 이미지 경로 수정

--- a/Database/SQLD/01_데이터_모델링의_이해/02_엔터티.md
+++ b/Database/SQLD/01_데이터_모델링의_이해/02_엔터티.md
@@ -12,7 +12,7 @@
 
 ## 2. 엔터티와 인스턴스에 대한 내용과 표기법
 
-![entity-instance](../../img/sql/entity-instance.jpg)
+![entity-instance](../../../img/sql/entity-instance.jpg)
 
 ## 3. 엔터티의 특징
 
