--- a/Database/SQLD/01_데이터_모델링의_이해/03_속성.md
+++ b/Database/SQLD/01_데이터_모델링의_이해/03_속성.md
@@ -42,7 +42,7 @@
 
 ### 나. 속성의 표기법
 
-![attribute](../../img/sql/attribute.jpg)
+![attribute](../../../img/sql/attribute.jpg)
 
 ## 3. 속성의 특징
 - 엔터티와 마찬가지로 반드시 해당 업무에서 필요하고 관리하고자 하는 정보이어야 한다.
