--- a/Database/SQLD/01_데이터_모델링의_이해/04_관계.md
+++ b/Database/SQLD/01_데이터_모델링의_이해/04_관계.md
@@ -16,7 +16,7 @@
 
 ## 2. 관계의 분류
 
-![relationship](../../img/sql/relationship.jpg)
+![relationship](../../../img/sql/relationship.jpg)
 
 - 존재에 의한 관계: 두 엔터티 사이의 관계가 존재의 형태에 의해 형성
 - 행위에 의한 관계: 두 엔터티 사이의 관계가 행위에 의한 관계로 인해 형성
@@ -45,15 +45,15 @@
 
 #### 1) 1:1 관계
 
-![1_1](../../img/sql/relation_1_1.jpg)
+![1_1](../../../img/sql/relation_1_1.jpg)
 
 #### 2) 1:M 관계
 
-![1_m](../../img/sql/relation_1_m.jpg)
+![1_m](../../../img/sql/relation_1_m.jpg)
 
 #### 3) M:M 관계
 
-![m_m](../../img/sql/relation_m_m.jpg)
+![m_m](../../../img/sql/relation_m_m.jpg)
 
 ### 다. 관계선택사양
 
@@ -72,7 +72,7 @@
 
 ### 나. 관계 읽기
 
-![relation_read](../../img/sql/relation_read.jpg)
+![relation_read](../../../img/sql/relation_read.jpg)
 
 관계에 참여하는 기준 엔터티를 하나 또는 각(Each)로 읽고, 대상 엔터티의 개수(하나, 하나 이상)을 읽고 관계선택사양과 관계명을 읽도록 한다
 
