--- a/Database/SQLD/02_데이터_모델과_성능/01_성능_데이터_모델링의_개요.md
+++ b/Database/SQLD/02_데이터_모델과_성능/01_성능_데이터_모델링의_개요.md
@@ -15,7 +15,7 @@
 
 ## 2. 성능 데이터 모델링 수행시점
 
-![performance_graph](../../img/sql/performance_improvement_graph.jpg)
+![performance_graph](../../../img/sql/performance_improvement_graph.jpg)
 
 - 프로젝트 수행 중에 있어서 사전에 할 수록 비용이 들지 않는다
 - 분석/설계 단계에서 데이터 모델에 성능을 고려한 데이터 모델링을 수행할 경우 성능저하에 따른 재업무 비용을 최소화 할 수 있는 기회를 가지게 된다
