--- a/Database/SQLD/04_SQL_활용/02_집합연산자.md
+++ b/Database/SQLD/04_SQL_활용/02_집합연산자.md
@@ -9,7 +9,7 @@
 
 ## 종류
 
-![set_oper](../../img/sql/set_operator.jpg)
+![set_oper](../../../img/sql/set_operator.jpg)
 
 | 집합 연산자 | 연산자의 의미 |
 |-|-|
