--- a/Database/SQLD/05_SQL_최적화_기본원리/01_옵티마이저와_실행계획.md
+++ b/Database/SQLD/05_SQL_최적화_기본원리/01_옵티마이저와_실행계획.md
@@ -25,7 +25,7 @@
 
 #### 비용 기반 옵티마이저 구성요소
 
-![cbo_component](../../img/sql/cbo_component.jpg)
+![cbo_component](../../../img/sql/cbo_component.jpg)
 
 1. 질의 변환기: 사용자가 작성한 SQL문을 처리하기에 보다 용이한 형태로 변환하는 모듈
 2. 대안 계획 생성기: 동일한 결과를 생성하는 다양한 대안 계획을 생성하는 모듈. 연산의 적용 순서 변경, 연산 방법 변경, 조인 순서 변경 등을 통해 생성
@@ -39,7 +39,7 @@
 
 ### 실행계획 정보의 구성요소
 
-![execution_plan](../../img/sql/execution_plan.jpg)
+![execution_plan](../../../img/sql/execution_plan.jpg)
 
 #### 1) 조인 순서
 - 조인작업을 수행할 때 참조하는 테이블의 순서
@@ -68,7 +68,7 @@
 
 ### 3. SQL 처리 흐름도
 
-![sql_flowchart](../../img/sql/sql_flowchart.jpg)
+![sql_flowchart](../../../img/sql/sql_flowchart.jpg)
 
 - SQL의 내부적인 처리 절차를 시각적으로 표현한 도표
 - 실행계획을 시각화 한 것
