--- a/Database/SQLD/01_데이터_모델링의_이해/05_식별자.md
+++ b/Database/SQLD/01_데이터_모델링의_이해/05_식별자.md
@@ -19,7 +19,7 @@
 
 ### 가. 식별자 분류
 
-![identifier_classify](../../img/sql/identifier_classify.jpg)
+![identifier_classify](../../../img/sql/identifier_classify.jpg)
 
 - 엔터티 내에서 대표성을 가지는가에 따라 `주식별자`와 `보조식별자`로 구분
 - 엔터티 내에서 스스로 생성되었는지 여부에 따라 `내부식별자`와 `외부식별자`로 구분
@@ -28,7 +28,7 @@
 
 ### 나. 식별자 표기법
 
-![identifier](../../img/sql/identifier.jpg)
+![identifier](../../../img/sql/identifier.jpg)
 
 ## 4. 주식별자 도출 기준
 
