fix: BOJ 숨바꼭질 3 오타 수정

--- a/Algorithm/풀이/boj/graph_bfs/[BOJ#13549]숨바꼭질3.md
+++ b/Algorithm/풀이/boj/graph_bfs/[BOJ#13549]숨바꼭질3.md
@@ -1,11 +1,11 @@
- # 백준 알고리즘 13549번 - 숨바꼭질
+# 백준 알고리즘 13549번 - 숨바꼭질 3
 
 - [https://www.acmicpc.net/problem/13549](https://www.acmicpc.net/problem/13549)
--   사용 언어: Java
+- 사용 언어: Java
 
 ## 문제
 
-수빈이는 동생과 숨바꼭질을 하고 있다. 수빈이는 현재 점 N(0 ≤ N ≤ 100,000)에 있고, 동생은 점 K(0 ≤ K ≤ 100,000)에 있다. 수빈이는 걷거나 순간이동을 할 수 있다. 만약, 수빈이의 위치가 X일 때 걷는다면 1초 후에 X-1 또는 X+1로 이동하게 된다. 순간이동을 하는 경우에는 0초 후에 2*X의 위치로 이동하게 된다.
+수빈이는 동생과 숨바꼭질을 하고 있다. 수빈이는 현재 점 N(0 ≤ N ≤ 100,000)에 있고, 동생은 점 K(0 ≤ K ≤ 100,000)에 있다. 수빈이는 걷거나 순간이동을 할 수 있다. 만약, 수빈이의 위치가 X일 때 걷는다면 1초 후에 X-1 또는 X+1로 이동하게 된다. 순간이동을 하는 경우에는 0초 후에 2\*X의 위치로 이동하게 된다.
 
 수빈이와 동생의 위치가 주어졌을 때, 수빈이가 동생을 찾을 수 있는 가장 빠른 시간이 몇 초 후인지 구하는 프로그램을 작성하시오.
 
@@ -14,10 +14,10 @@
 첫 번째 줄에 수빈이가 있는 위치 N과 동생이 있는 위치 K가 주어진다. N과 K는 정수이다.
 
 ## 출력
- 
+
 수빈이가 동생을 찾는 가장 빠른 시간을 출력한다.
 
-## 풀이 
+## 풀이
 
 ```java
 import java.util.ArrayDeque;
@@ -30,7 +30,7 @@ public class BOJ13549 {
   static final int MAX = 200000;
 
   public static void main(String[] args) {
-    
+
     Scanner sc = new Scanner(System.in);
 
     int n = sc.nextInt();
@@ -73,7 +73,7 @@ public class BOJ13549 {
         }
       }
     }
-    
+
     System.out.println(dist[k]);
   }
 }
@@ -81,6 +81,6 @@ public class BOJ13549 {
 
 ## 풀이시 유의사항
 
-숨바꼭질 문제에서 순간이동시 가중치가 0으로 변형된 문제. 
+숨바꼭질 문제에서 순간이동시 가중치가 0으로 변형된 문제.
 
 덱을 이용하여 가중치에 따라 push하는 지점을 다르게 하는 방법을 통해 두 개의 가중치를 처리하도록 한다.
