--- a/Algorithm/풀이/boj/brute_force/[BOJ#10971]외판원순회_2.md
+++ b/Algorithm/풀이/boj/brute_force/[BOJ#10971]외판원순회_2.md
@@ -1,4 +1,4 @@
-# 백준 알고리즘 10971번 - 다음 순열
+# 백준 알고리즘 10971번 - 외판원 순회 2
 
 - [https://www.acmicpc.net/problem/10971](https://www.acmicpc.net/problem/10971)
 -   사용 언어: Java
