--- a/Algorithm/풀이/boj/brute_force/[BOJ#1182]부분집합의_합.md
+++ b/Algorithm/풀이/boj/brute_force/[BOJ#1182]부분집합의_합.md
@@ -1,4 +1,4 @@
-# 백준 알고리즘 1182번 - 암호 만들기
+# 백준 알고리즘 1182번 - 부분집합의 합
 
 - [https://www.acmicpc.net/problem/1182](https://www.acmicpc.net/problem/1182)
 -   사용 언어: Java
