--- a/Algorithm/풀이/boj/graph_bfs/[BOJ#11724]연결_요소의_개수.md
+++ b/Algorithm/풀이/boj/graph_bfs/[BOJ#11724]연결_요소의_개수.md
@@ -1,4 +1,4 @@
-# 백준 알고리즘 11724번 - 이분 그래프
+# 백준 알고리즘 11724번 - 연결 요소의 개수
 
 - [https://www.acmicpc.net/problem/11724](https://www.acmicpc.net/problem/11724)
 -   사용 언어: Java
