--- a/Algorithm/풀이/boj/graph_bfs/[BOJ#14226]이모티콘.md
+++ b/Algorithm/풀이/boj/graph_bfs/[BOJ#14226]이모티콘.md
@@ -1,4 +1,4 @@
-# 백준 알고리즘 14226번 - DFS와 BFS
+# 백준 알고리즘 14226번 - 이모티콘
 
 - [https://www.acmicpc.net/problem/14226](https://www.acmicpc.net/problem/14226)
 -   사용 언어: Java
