--- a/Algorithm/풀이/boj/stack_queue/[BOJ#9012] 괄호.md
+++ b/Algorithm/풀이/boj/stack_queue/[BOJ#9012] 괄호.md
@@ -1,4 +1,4 @@
-# 백준 알고리즘 - 9012번
+# 백준 알고리즘 9012번 - 괄호
 
 - [https://www.acmicpc.net/problem/9012](https://www.acmicpc.net/problem/9012)
 - 사용 언어: Java
