--- a/Algorithm/풀이/programmers/coding_kit/heap/디스크_컨트롤러.md
+++ b/Algorithm/풀이/programmers/coding_kit/heap/디스크_컨트롤러.md
@@ -1,4 +1,4 @@
-# 프로그래머스 코딩테스트 연습 - 더 맵게
+# 프로그래머스 코딩테스트 연습 - 디스크 컨트롤러
 
 - 유형: 힙
 - [https://programmers.co.kr/learn/courses/30/lessons/42626](https://programmers.co.kr/learn/courses/30/lessons/42626)
