--- a/Algorithm/풀이/programmers/coding_kit/heap/라면공장.md
+++ b/Algorithm/풀이/programmers/coding_kit/heap/라면공장.md
@@ -1,4 +1,4 @@
-# 프로그래머스 코딩테스트 연습 - 더 맵게
+# 프로그래머스 코딩테스트 연습 - 라면 공장
 
 - 유형: 힙
 - [https://programmers.co.kr/learn/courses/30/lessons/42629](https://programmers.co.kr/learn/courses/30/lessons/42629)
