--- a/Algorithm/풀이/programmers/2018/소수_만들기.md
+++ b/Algorithm/풀이/programmers/2018/소수_만들기.md
@@ -1,4 +1,4 @@
-# 프로그래머스 코딩테스트 연습 - 스킬트리
+# 프로그래머스 코딩테스트 연습 - 소수 만들기
 
 - 유형: 브루트 포스
 - [https://programmers.co.kr/learn/courses/30/lessons/12977](https://programmers.co.kr/learn/courses/30/lessons/12977)
