--- a/Spring/Core/싱글톤과_프로토타입_스코프.md
+++ b/Spring/Core/싱글톤과_프로토타입_스코프.md
@@ -7,6 +7,17 @@
 
 스코프 타입 중 성격이 크게 다른 싱글톤, 프로토타입 스코프에 대해 알아보고자 한다
 
+## 스코프 종류
+
+| 스코프 | 설명 |
+|-|-|
+| singleton | **기본값**. IoC 컨테이너당 빈 인스턴스 1개를 생성 |
+| prototype | 컨테이너에 빈을 요청할 때마다 빈 인스턴스를 새로 생성 |
+| request | HTTP 요청당 하나의 빈 인스턴스를 생성. 요청이 끝나면 소멸됨. 웹 애플리케이션 컨텍스트에만 해당됨 |
+| session | HTTP 세션당 빈 인스턴스 하나를 생성. 세션이 끝나면 소멸됨. 웹 애플리케이션 컨텍스트에만 해당 |
+| globalSession | 전역 HTTP 세션당 빈 인스턴스 하나를 생성. 포털 애플리케이션 컨텍스트에만 해당 |
+| application | 서블릿 컨텍스트에 저장. 싱글톤 스코프와 비슷한 존재 범위를 가짐 |
+
 
 ## 싱글톤 스코프
 - **기본값**
