--- a/Spring/Toby/08_스프링이란_무엇인가.md
+++ b/Spring/Toby/08_스프링이란_무엇인가.md
@@ -58,10 +58,10 @@
 ### 비침투적인 방식을 통한 효과적인 해결책: 스프링
 
 - EJB처럼 어떤 기술을 적용했을 때 그 기술과 관련된 코드나 규약 등이 코드에 등장하는 경우를 침투적인 기술이라 함
-- 꼭 필요한 기능을 하용하는 것도 아니면서 단지 어떤 기술을 바탕으로 만들어진다고 해서 특정 클래스나 인터페이스, API 등의 코드에 등장한다면 그것은 침투적인 기술이 되어 복잡함을 가중시키는 원인이 됨
+- 꼭 필요한 기능을 사용하는 것도 아니면서 단지 어떤 기술을 바탕으로 만들어진다고 해서 특정 클래스나 인터페이스, API 등의 코드에 등장한다면 그것은 침투적인 기술이 되어 복잡함을 가중시키는 원인이 됨
 - 비침투적인 기술은 기술의 적용 사실이 코드에 직접 반영되지 않는다는 틍징이 있음
 - 스프링은 비침투적인 기술이라는 전략을 택해 기술적인 복잡함과 비즈니스 로직을 다루는 코드를 깔끔하게 분리 가능
-
+사
 
 ### 기술적 복잡함을 상대하는 스프링의 전략
 
@@ -160,7 +160,7 @@
 
 - 인터페이스가 다른 오브젝트를 클라이언트가 사용하는 인터페이스로 바꾸어주는 기능
 - 디자인 패턴의 어댑터 패턴
-- DI의 응용 방법 중 하나이자 스프링의 대뵤적인 기술로도 분류되는 일관성 있는 서비스 추상화가 대표적인 예
+- DI의 응용 방법 중 하나이자 스프링의 대표적인 기술로도 분류되는 일관성 있는 서비스 추상화가 대표적인 예
   - 클라이언트가 일관성 있게 사용할 수 있는 인터페이스를 정의해주고 DI를 통해 어댑터 역할을 하는 오브젝트를 이용하게 함
 
 #### 5) 프록시
