--- a/Database/SQLD/03_SQL_기본/09_조인.md
+++ b/Database/SQLD/03_SQL_기본/09_조인.md
@@ -3,7 +3,7 @@
 
 ## 1. JOIN 개요
 
-- 두 개 이사으이 테이블들을 연결 또는 결합하여 데이터를 출력하는 것
+- 두 개 이상의 테이블들을 연결 또는 결합하여 데이터를 출력하는 것
 - 일반적인 경우 행들인 PK와 FK 값의 연관에 의해 JOIN이 성립
 - PK, FK의 관계가 없어도 논리적인 값들의 연관만으로 JOIN이 성립 가능하다
 - FROM 절에 여러 테이블이 나열되더라도 SQL에서 조인을 처리할 때는 두 개의 집합 간에서만 조인이 이루어진다
