--- a/Spring/Toby/09_스프링_프로젝트_시작하기.md
+++ b/Spring/Toby/09_스프링_프로젝트_시작하기.md
@@ -4,7 +4,7 @@
 ## 애플리케이션 아키텍처
 
 - 아키텍처는 여러 가지 방식으로 정의되고 이해될 수 있는 용어
-  - 어떤 경계 안에 있는 내부 구성요소들이 어떤 책임을 갖고 있고, 어떤 방식으로 서로 관께를 맺고 동작하는지를 규정하는 것
+  - 어떤 경계 안에 있는 내부 구성요소들이 어떤 책임을 갖고 있고, 어떤 방식으로 서로 관계를 맺고 동작하는지를 규정하는 것
   - 단순히 정적인 구조를 나타내는 것으로만 생각하기 쉽지만 실제로는 그 구조에서 일어나는 동적인 행위와 깊은 연관이 있음
 
 ## 1. 계층형 아키텍처
@@ -81,7 +81,7 @@
 - 객체지향 기술이나 언어를 사용하지 않던 시절의 엔터프라이즈 애플리케이션과 크게 다를 바가 없음
   - 자바 코드의 로직은 기껏해야 사용자 요청에 따라서 어떤 SQL을 가진 DAO를 실행할지를 결정하는 정도
   - 자바 코드를 단지 DB와 웹 화면을 연결해주는 단순한 인터페이스 도구로 전락시킴
-  - 자바의 오브젝트는 단지 HTTP 서비스 채널을 만들어주고 JDBC를 이용해 DB 기능을 사용하게 하는 스크립트 정돋로 역할이 축소됨
+  - 자바의 오브젝트는 단지 HTTP 서비스 채널을 만들어주고 JDBC를 이용해 DB 기능을 사용하게 하는 스크립트 정도로 역할이 축소됨
 - 하나의 업무 트랜잭션에 모든 계층의 코드가 종속되는 경향이 강함
   - 모든 계층의 코드가 하나의 작업에 종속됨
   - 대부분의 코드는 대응되는 작업 단위에 1:1로 매핑됨
@@ -157,7 +157,7 @@
 
 - 3계층 구조는 스프링을 사용하는 엔터프라이즈 애플리케이션에서 가장 많이 사용되는 구조
 - 3계층이라는 것은 논리적이고 개념적인 구분이지 꼭 오브젝트 단위로 끊어져서 만들어지는 게 아님을 염두해야 함
-- 3계층을 단순화해서 2계층으로 만든다면 서비스 계층과 데이터 액세스 계층을 통합흐는 것이 낫다
+- 3계층을 단순화해서 2계층으로 만든다면 서비스 계층과 데이터 액세스 계층을 통합하는 것이 낫다
   - 논리적으로는 서비스 계층과 데이터 액세스 계층의 경계를 분명히 하는 것이 좋음
 - 프레젠테이션 계층은 보통 MVC라는 이름으로 잘 알려진 패턴 또는 아키텍처를 주로 사용
 - 스프링은 이 MVC 중 가장 부담을 많이 지고 있는 컨트롤러에 해당하는 부분을 또 다시 세분화해서 여러 단계의 오브젝트로 만들 수 있도록 설계됨
