--- a/Spring/Toby/08_스프링이란_무엇인가.md
+++ b/Spring/Toby/08_스프링이란_무엇인가.md
@@ -9,7 +9,7 @@
 
 ### 애플리케이션 프레임워크
 
-- 일반적으로 라이븨러리나 프레임워크는 특정 업무 분야나 한 가지 기술에 특화된 목표를 가지고 만들어짐
+- 일반적으로 라이브러리나 프레임워크는 특정 업무 분야나 한 가지 기술에 특화된 목표를 가지고 만들어짐
 - 애플리케이션 프레임워크는 특정 계층이나 기술, 업무 분야에 국한되지 않고 애플리케이션의 전 영역을 포괄하는 범용적인 프레임워크를 말함
 - 애플리케이션 개발의 전 과정을 빠르고 편리하며 효율적으로 진행하는데 일차적인 목표를 두는 프레임워크
 - 스프링의 일차적인 존재목적은 핵심 기술에 담긴 프로그래밍 모델을 일관되게 적용해서 엔터프라이즈 애플리케이션 전 계층과 전 영역에서 전략과 기능을 제공해줌으로써 애플리케이션을 편리하게 개발하게 해주는 애플리케이션 프레임워크로 사용되는 것
@@ -61,7 +61,7 @@
 - 꼭 필요한 기능을 사용하는 것도 아니면서 단지 어떤 기술을 바탕으로 만들어진다고 해서 특정 클래스나 인터페이스, API 등의 코드에 등장한다면 그것은 침투적인 기술이 되어 복잡함을 가중시키는 원인이 됨
 - 비침투적인 기술은 기술의 적용 사실이 코드에 직접 반영되지 않는다는 틍징이 있음
 - 스프링은 비침투적인 기술이라는 전략을 택해 기술적인 복잡함과 비즈니스 로직을 다루는 코드를 깔끔하게 분리 가능
-사
+
 
 ### 기술적 복잡함을 상대하는 스프링의 전략
 
@@ -152,7 +152,7 @@
 
 #### 3) 부가기능의 추가
 
-- 핵심 가능은 그대로 둔 채 부가기능을 추가하는 것
+- 핵심 기능은 그대로 둔 채 부가기능을 추가하는 것
 - 디자인 패턴의 데코레이션 패턴
 - 부가기능의 추가 방식을 특정 오브젝트가 아니라 좀 더 많은 대상으로 일반화해서 적용하면 AOP가 된다
 
