--- a/Spring/Toby/04_예외.md
+++ b/Spring/Toby/04_예외.md
@@ -67,7 +67,7 @@
 - 내부에서 발생한 예외를 그대로 던지는 것이 그 예외상황에 대한 적절한 의미를 부여해주지 못 하는 경우, 의미를 분명하게 해줄 수 있는 예외로 바꾸어주기 위해서 사용
 - 예외를 처리하기 쉽고 단순하게 만들기 위해서 포장하기 위해 사용
   - 예외처리를 강제하는 체크 예외를 언체크 예외인 런타임 예외를 바꾸는 경우 주로 사용
-- 대부분의 서버 환경에서는 애플리케이션 코드에서 처리하지 않고 전달된 예외들을 일괄저으로 다룰 수 있는 기능을 제공
+- 대부분의 서버 환경에서는 애플리케이션 코드에서 처리하지 않고 전달된 예외들을 일괄적으로 다룰 수 있는 기능을 제공
   - 복구가 불가능한 예외라면 가능한 한 빨리 런타임 예외로 포장하여 다른 계층의 메소드를 작성할 때 불필요한 throws 선언이 들어가지 않도록 해야 한다
   - 또한 예외처리 서비스 등을 이용해 자세한 로그를 남기고, 관리자에게는 메일 등으로 통보해주고, 사용자에게는 친절한 안내 메시지를 보여주는 식으로 처리하는게 바람직
 
